--- a/app/src/main/res/layout/activity_login_student.xml
+++ b/app/src/main/res/layout/activity_login_student.xml
@@ -11,128 +11,133 @@
         android:id="@+id/student_pic"
         android:layout_width="200dp"
         android:layout_height="200dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/student_pic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="40dp"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
+        android:id="@+id/tv_login_student"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_login_student"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/textview_border"
+        android:fontFamily="@font/adamina"
         android:gravity="center"
         android:text="@string/login_as_student"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/student_pic"
-        android:fontFamily="@font/adamina"
-        android:background="@drawable/textview_border"
-        android:textSize="25sp"
-        android:textColor="@color/logo_text_color"
-        android:textStyle="bold"
-        android:layout_marginTop="5dp" />
+        app:layout_constraintTop_toBottomOf="@id/student_pic" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
         android:id="@+id/til_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_start_end"
         android:layout_marginTop="60dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_login_student"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginEnd="@dimen/margin_start_end"
+        android:textColorHint="@color/text_color"
+        app:boxStrokeColor="@color/input_field_box_stroke_color"
+        app:hintTextColor="@color/text_color"
         app:layout_constraintEnd_toEndOf="parent"
-        app:boxStrokeColor="@color/logo_text_color"
-        android:textColorHint="@color/logo_text_color"
-        app:hintTextColor="@color/logo_text_color">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_login_student">
+
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/adamina"
-            android:hint="@string/enter_email"
-            android:id="@+id/et_email"
+            android:hint="@string/email"
             android:inputType="textEmailAddress"
-            android:textColor="@color/logo_text_color"/>
+            android:textColor="@color/text_color" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
         android:id="@+id/til_password"
-        android:layout_marginTop="15dp"
-        app:layout_constraintTop_toBottomOf="@+id/til_email"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_start_end"
+        android:layout_marginTop="@dimen/input_field_margin_top"
+        android:layout_marginEnd="@dimen/margin_start_end"
+        android:textColorHint="@color/text_color"
+        app:boxStrokeColor="@color/input_field_box_stroke_color"
+        app:hintTextColor="@color/text_color"
         app:layout_constraintEnd_toEndOf="parent"
-        app:boxStrokeColor="@color/logo_text_color"
-        android:textColorHint="@color/logo_text_color"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/til_email"
         app:passwordToggleEnabled="true"
-        app:passwordToggleTint="@color/logo_text_color"
-        app:hintTextColor="@color/logo_text_color">
+        app:passwordToggleTint="@color/password_toggle_color">
+
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/enter_email"
             android:fontFamily="@font/adamina"
-            android:id="@+id/et_password"
+            android:hint="@string/password"
             android:inputType="textPassword"
-            android:textColor="@color/logo_text_color"/>
+            android:textColor="@color/text_color" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
+        android:id="@+id/tvForgetPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/forget_password"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/til_password"
-        android:layout_marginStart="36dp"
-        android:textColor="@color/logo_text_color"
-        android:textStyle="bold"
-        android:layout_marginTop="5dp"
-        android:id="@+id/tv_forgetpassword"
+        android:layout_marginStart="@dimen/margin_start_end"
+        android:layout_marginTop="@dimen/text_margin_top"
         android:fontFamily="@font/adamina"
-        android:textSize="12.5sp" />
+        android:text="@string/forget_password"
+        android:textColor="@color/text_color"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/til_password" />
 
     <Button
-        android:layout_width="120dp"
+        android:id="@+id/btnLogin"
+        android:layout_width="@dimen/button_width"
         android:layout_height="wrap_content"
-        android:id="@+id/btn_login"
+        android:layout_marginTop="30dp"
+        android:backgroundTint="@color/button_color"
         android:text="@string/login"
         android:textColor="@color/white"
-        android:fontFamily="@font/adamina"
-        android:textSize="25sp"
+        android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_forgetpassword"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:backgroundTint="@color/logo_text_color" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/don_t_have_an_account"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_login"
-        android:layout_marginStart="100dp"
-        android:textColor="@color/black"
-        android:layout_marginTop="30dp"
-        android:id="@+id/tv_create"
-        android:textSize="13sp" />
+        app:layout_constraintTop_toBottomOf="@id/tvForgetPassword"
+
+        />
+
     <TextView
+        android:id="@+id/tv_create"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/register_here"
+        android:layout_marginStart="85dp"
+        android:layout_marginTop="@dimen/text_margin_top"
+        android:text="@string/don_t_have_an_account"
+        android:textColor="@color/black"
+        android:textSize="13sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
+
+    <TextView
+        android:id="@+id/tvRegister"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="@dimen/text_margin_top"
+        android:fontFamily="@font/adamina"
+        android:text="@string/register"
+        android:textColor="@color/text_color"
+        android:textSize="13sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/tv_create"
         app:layout_constraintStart_toEndOf="@id/tv_create"
-        app:layout_constraintTop_toBottomOf="@+id/btn_login"
-        android:textColor="@color/logo_text_color"
-        android:layout_marginStart="3dp"
-        android:layout_marginTop="30dp"
-        android:id="@+id/tv_create_account"
-        android:fontFamily="@font/adamina"
-        android:textStyle="bold"
-        android:textSize="13sp" />
-
-
-
+        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
