--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -11,71 +11,92 @@
         android:id="@+id/tv_welcome"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/text_margin_top"
         android:fontFamily="@font/adamina"
         android:gravity="center"
         android:text="@string/welcome"
+        android:textColor="@color/text_color"
         android:textSize="25sp"
-        android:textColor="@color/logo_text_color"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        android:textStyle="bold"/>
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
+        android:id="@+id/tv_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_text"
+        android:layout_marginTop="@dimen/text_margin_top"
         android:fontFamily="@font/adamina"
         android:gravity="center"
+        android:padding="10dp"
         android:text="@string/find_local_and_online_educators_for_tutoring_coaching_and_assistance_with_academic_work"
+        android:textColor="@color/black"
         android:textSize="15sp"
-        android:textColor="@color/logo_text_color"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
-        android:layout_margin="10dp"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_welcome" />
 
     <View
+        android:id="@+id/student_pic"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:background="@drawable/student_pic"
-        app:layout_constraintTop_toBottomOf="@id/tv_text"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="20dp"
-        android:id="@+id/student_pic"/>
+        android:background="@drawable/student_pic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_text" />
+
     <TextView
-        android:id="@+id/tv_student"
+        android:id="@+id/tvStudent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/text_margin_top"
         android:fontFamily="@font/adamina"
         android:gravity="center"
         android:text="@string/student"
-        android:textSize="25sp"
-        android:textColor="@color/logo_text_color"
-        app:layout_constraintTop_toBottomOf="@+id/student_pic"
+        android:textColor="@color/text_color"
+        android:textSize="22sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        android:textStyle="bold"/>
+        app:layout_constraintTop_toBottomOf="@+id/student_pic" />
+
     <View
+        android:id="@+id/teacher_pic"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:background="@drawable/teacher_pic"
-        app:layout_constraintTop_toBottomOf="@id/tv_student"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="20dp"
-        android:id="@+id/teacher_pic"/>
+        android:background="@drawable/teacher_pic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvStudent" />
+
     <TextView
-        android:id="@+id/tv_teacher"
+        android:id="@+id/tvTeacher"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/text_margin_top"
         android:fontFamily="@font/adamina"
         android:gravity="center"
         android:text="@string/teacher"
-        android:textSize="25sp"
-        android:textColor="@color/logo_text_color"
-        app:layout_constraintTop_toBottomOf="@+id/teacher_pic"
+        android:textColor="@color/text_color"
+        android:textSize="22sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        android:textStyle="bold"/>
+        app:layout_constraintTop_toBottomOf="@+id/teacher_pic" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/text_margin_top"
+        android:fontFamily="@font/adamina"
+        android:gravity="center"
+        android:padding="10dp"
+        android:text="@string/click_on_image_to_continue"
+        android:textColor="@color/text_color"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvTeacher"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
