--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="logo_text_color">#691CC1</color>
+    <color name="button_color">#691CC1</color>
+    <color name="text_color">#691CC1</color>
+    <color name="password_toggle_color">#691CC1</color>
+    <color name="input_field_box_stroke_color">#691CC1</color>
+    <color name="status_bar_color">#B48EE0</color>
+
 </resources>
