--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="splash_circle_images">250dp</dimen>
+    <dimen name="margin_start_end">10dp</dimen>
+    <dimen name="text_margin_top">10dp</dimen>
+    <dimen name="input_field_margin_top">15dp</dimen>
+    <dimen name="text_margin_bottom">10dp</dimen>
+    <dimen name="button_width">200dp</dimen>
+    <dimen name="logo_width">80dp</dimen>
+    <dimen name="logo_height">70dp</dimen>
 </resources>
+
