--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,9 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.TutorConnect" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="android:windowBackground">@color/white</item>
+        <item name="android:statusBarColor">@color/status_bar_color</item>
+
     </style>
 
     <style name="Theme.TutorConnect" parent="Base.Theme.TutorConnect" />
