--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -19,8 +19,8 @@
         />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="@dimen/splash_circle_images"
-        android:layout_height="@dimen/splash_circle_images"
+        android:layout_width="220dp"
+        android:layout_height="220dp"
         android:background="@drawable/circle_middle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/v1"
@@ -29,31 +29,32 @@
         >
 
         <ImageView
-            android:layout_width="@dimen/logo_width"
-            android:layout_height="@dimen/logo_height"
+            android:layout_width="140dp"
+            android:layout_height="130dp"
             android:src="@drawable/ic_logo"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:id="@+id/iv"
+            android:contentDescription="@string/logo"
             />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/adamina"
-            android:text="@string/tutor_connect"
-            android:textColor="@color/logo_text_color"
-            android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/iv"
-            android:layout_marginTop="@dimen/text_margin_top"
-            android:textStyle="bold"
-            />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/adamina"
+        android:text="@string/tutor_connect"
+        android:textColor="@color/logo_text_color"
+        android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/v2"
+        android:layout_marginTop="15dp"
+        android:textStyle="bold"
+        />
 
     <View
         android:layout_width="@dimen/splash_circle_images"
@@ -61,6 +62,8 @@
         android:background="@drawable/circle_right"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/v2"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/v3"
+        android:layout_marginTop="80dp"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
