--- a/app/src/main/res/layout/activity_register_student.xml
+++ b/app/src/main/res/layout/activity_register_student.xml
@@ -41,108 +41,213 @@
         android:layout_marginTop="75dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginStart="@dimen/margin_start_end"
-        />
+        android:fontFamily="@font/adamina"/>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/ilName"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_start_end"
-        android:layout_marginTop="70dp"
-        android:layout_marginEnd="@dimen/margin_start_end"
-        android:textColorHint="@color/text_color"
-        app:boxStrokeColor="@color/input_field_box_stroke_color"
-        app:hintTextColor="@color/text_color"
+        android:layout_height="0dp"
+        android:layout_marginTop="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvRegister"
+        app:layout_constraintTop_toBottomOf="@id/ivLogo"
+        android:layout_marginBottom="20dp">
 
-        >
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etName"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/adamina"
-            android:hint="@string/name"
-            android:inputType="textPersonName"
-            android:textColor="@color/text_color" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_height="wrap_content">
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/ilName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_start_end"
+                android:layout_marginTop="70dp"
+                android:layout_marginEnd="@dimen/margin_start_end"
+                android:textColorHint="@color/text_color"
+                app:boxStrokeColor="@color/input_field_box_stroke_color"
+                app:hintTextColor="@color/text_color"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/ilEmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_start_end"
-        android:layout_marginTop="@dimen/input_field_margin_top"
-        android:layout_marginEnd="@dimen/margin_start_end"
-        android:textColorHint="@color/text_color"
-        app:boxStrokeColor="@color/input_field_box_stroke_color"
-        app:hintTextColor="@color/text_color"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ilName">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/etName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/adamina"
+                    android:hint="@string/name"
+                    android:inputType="textPersonName"
+                    android:textColor="@color/text_color" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etEmail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/adamina"
-            android:hint="@string/email"
-            android:inputType="textEmailAddress"
-            android:textColor="@color/text_color" />
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/ilEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_start_end"
+                android:layout_marginTop="@dimen/input_field_margin_top"
+                android:layout_marginEnd="@dimen/margin_start_end"
+                android:textColorHint="@color/text_color"
+                app:boxStrokeColor="@color/input_field_box_stroke_color"
+                app:hintTextColor="@color/text_color"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ilName">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/ilPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_start_end"
-        android:layout_marginTop="@dimen/input_field_margin_top"
-        android:layout_marginEnd="@dimen/margin_start_end"
-        android:textColorHint="@color/text_color"
-        app:boxStrokeColor="@color/input_field_box_stroke_color"
-        app:hintTextColor="@color/text_color"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ilEmail"
-        app:passwordToggleEnabled="true"
-        app:passwordToggleTint="@color/password_toggle_color">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/etEmail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/adamina"
+                    android:hint="@string/email"
+                    android:inputType="textEmailAddress"
+                    android:textColor="@color/text_color" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/adamina"
-            android:hint="@string/password"
-            android:inputType="textPassword"
-            android:textColor="@color/text_color" />
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/ilPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_start_end"
+                android:layout_marginTop="@dimen/input_field_margin_top"
+                android:layout_marginEnd="@dimen/margin_start_end"
+                android:textColorHint="@color/text_color"
+                app:boxStrokeColor="@color/input_field_box_stroke_color"
+                app:hintTextColor="@color/text_color"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ilEmail"
+                app:passwordToggleEnabled="true"
+                app:passwordToggleTint="@color/password_toggle_color">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/ilCPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_start_end"
-        android:layout_marginTop="@dimen/input_field_margin_top"
-        android:layout_marginEnd="@dimen/margin_start_end"
-        android:textColorHint="@color/text_color"
-        app:boxStrokeColor="@color/input_field_box_stroke_color"
-        app:hintTextColor="@color/text_color"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ilPassword"
-        app:passwordToggleEnabled="true"
-        app:passwordToggleTint="@color/password_toggle_color">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/etPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/adamina"
+                    android:hint="@string/password"
+                    android:inputType="textPassword"
+                    android:textColor="@color/text_color" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etCPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/adamina"
-            android:hint="@string/confirm_password"
-            android:inputType="textPassword"
-            android:textColor="@color/text_color" />
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/ilCPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_start_end"
+                android:layout_marginTop="@dimen/input_field_margin_top"
+                android:layout_marginEnd="@dimen/margin_start_end"
+                android:textColorHint="@color/text_color"
+                app:boxStrokeColor="@color/input_field_box_stroke_color"
+                app:hintTextColor="@color/text_color"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ilPassword"
+                app:passwordToggleEnabled="true"
+                app:passwordToggleTint="@color/password_toggle_color">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/etCPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/adamina"
+                    android:hint="@string/confirm_password"
+                    android:inputType="textPassword"
+                    android:textColor="@color/text_color" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/ilphone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_start_end"
+                android:layout_marginTop="@dimen/input_field_margin_top"
+                android:layout_marginEnd="@dimen/margin_start_end"
+                android:textColorHint="@color/text_color"
+                app:boxStrokeColor="@color/input_field_box_stroke_color"
+                app:hintTextColor="@color/text_color"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ilCPassword">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/etPhone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/adamina"
+                    android:hint="@string/phone_number"
+                    android:inputType="number"
+                    android:textColor="@color/text_color" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/iladdress"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_start_end"
+                android:layout_marginTop="@dimen/input_field_margin_top"
+                android:layout_marginEnd="@dimen/margin_start_end"
+                android:textColorHint="@color/text_color"
+                app:boxStrokeColor="@color/input_field_box_stroke_color"
+                app:hintTextColor="@color/text_color"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ilphone">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/etAddress"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/adamina"
+                    android:hint="@string/address"
+                    android:inputType="textEmailAddress"
+                    android:textColor="@color/text_color" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <Button
+                android:id="@+id/btn_SignUp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/iladdress"
+                android:layout_marginTop="15dp"
+                android:text="@string/sign_up"
+                android:textSize="25sp"
+                android:fontFamily="@font/adamina"
+                android:textStyle="bold"
+                />
+            <TextView
+                android:id="@+id/tvCreate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="100dp"
+                android:layout_marginTop="@dimen/text_margin_top"
+                android:layout_marginBottom="@dimen/text_margin_bottom"
+                android:text="@string/already_have_an_account"
+                android:textColor="@color/black"
+                android:textSize="13sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btn_SignUp"
+                />
+
+            <TextView
+                android:id="@+id/tvLogin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="@dimen/text_margin_top"
+                android:fontFamily="@font/adamina"
+                android:text="@string/login"
+                android:textColor="@color/text_color"
+                android:textSize="13sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@id/tvCreate"
+                app:layout_constraintStart_toEndOf="@id/tvCreate"
+                app:layout_constraintTop_toBottomOf="@+id/btn_SignUp" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
