--- a/app/src/main/res/layout/activity_verify_email_teacher.xml
+++ b/app/src/main/res/layout/activity_verify_email_teacher.xml
@@ -51,10 +51,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
-        android:padding="15dp"
-        android:text="@string/please_verify_the_email_that_we_have_sent_you"
+        android:padding="5dp"
+        android:text="@string/please_change_password_through_the_email_that_we_have_sent_you_and_then_click_on_the_save_button"
         android:textColor="@color/black"
         android:textSize="15sp"
+        android:gravity="center_horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvEmailVerification" />
@@ -86,13 +87,13 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_verify_email" />
 
     <Button
-        android:id="@+id/btnSubmit"
+        android:id="@+id/btnSave"
         android:layout_width="@dimen/button_width"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:backgroundTint="@color/button_color"
         android:padding="10dp"
-        android:text="@string/submit"
+        android:text="@string/save"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -101,15 +102,4 @@
         app:layout_constraintTop_toBottomOf="@id/tvEmailNotReceived"
 
         />
-
-    <ProgressBar
-        android:id="@+id/pbLoading"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="35dp"
-        app:layout_constraintStart_toEndOf="@id/btnSubmit"
-        app:layout_constraintTop_toBottomOf="@id/tvEmailNotReceived" />
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
