--- a/app/src/main/res/layout/activity_register_student.xml
+++ b/app/src/main/res/layout/activity_register_student.xml
@@ -7,55 +7,53 @@
     android:layout_height="match_parent"
     tools:context=".RegisterStudent">
 
-
     <View
+        android:id="@+id/view"
         android:layout_width="320dp"
         android:layout_height="340dp"
         android:background="@drawable/circle"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:id="@+id/view"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
+        android:id="@+id/ivLogo"
         android:layout_width="@dimen/logo_width"
         android:layout_height="@dimen/logo_height"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="55dp"
+        android:contentDescription="@string/logo"
         android:src="@drawable/ic_logo"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@string/logo"
-        android:id="@+id/ivLogo"
-        android:layout_marginTop="55dp"
-        android:layout_marginStart="15dp"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_start_end"
+        android:layout_marginTop="75dp"
+        android:fontFamily="@font/adamina"
         android:text="@string/register"
         android:textColor="@color/text_color"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@id/ivLogo"
-        android:layout_marginTop="75dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="@dimen/margin_start_end"
-        android:fontFamily="@font/adamina"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="30dp"
+        android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ivLogo"
-        android:layout_marginBottom="20dp">
+        app:layout_constraintTop_toBottomOf="@id/ivLogo">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/ilName"
                 android:layout_width="match_parent"
@@ -200,23 +198,21 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/adamina"
                     android:hint="@string/address"
-                    android:inputType="textEmailAddress"
                     android:textColor="@color/text_color" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <Button
-                android:id="@+id/btn_SignUp"
-                android:layout_width="wrap_content"
+                android:id="@+id/btnSignUp"
+                android:layout_width="@dimen/button_width"
                 android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/iladdress"
                 android:layout_marginTop="15dp"
                 android:text="@string/sign_up"
-                android:textSize="25sp"
-                android:fontFamily="@font/adamina"
+                android:textSize="20sp"
                 android:textStyle="bold"
-                />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/iladdress" />
+
             <TextView
                 android:id="@+id/tvCreate"
                 android:layout_width="wrap_content"
@@ -228,8 +224,7 @@
                 android:textColor="@color/black"
                 android:textSize="13sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btn_SignUp"
-                />
+                app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />
 
             <TextView
                 android:id="@+id/tvLogin"
@@ -244,10 +239,9 @@
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@id/tvCreate"
                 app:layout_constraintStart_toEndOf="@id/tvCreate"
-                app:layout_constraintTop_toBottomOf="@+id/btn_SignUp" />
+                app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />
         </androidx.constraintlayout.widget.ConstraintLayout>
+
     </ScrollView>
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
