--- a/app/src/main/res/layout/activity_login_student.xml
+++ b/app/src/main/res/layout/activity_login_student.xml
@@ -112,6 +112,16 @@
 
         />
 
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        app:layout_constraintStart_toEndOf="@id/btnLogin"
+        app:layout_constraintTop_toBottomOf="@id/tvForgetPassword"
+        android:layout_marginTop="35dp"
+        android:layout_marginStart="10dp"
+        android:id="@+id/pbLoading"
+        />
+
     <TextView
         android:id="@+id/tv_create"
         android:layout_width="wrap_content"
