--- a/app/src/main/res/layout/activity_verify_email_student.xml
+++ b/app/src/main/res/layout/activity_verify_email_student.xml
@@ -94,6 +94,7 @@
         android:padding="10dp"
         android:text="@string/save"
         android:textColor="@color/white"
+        android:fontFamily="@font/adamina"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
