--- a/app/src/main/res/layout/activity_register_student.xml
+++ b/app/src/main/res/layout/activity_register_student.xml
@@ -209,6 +209,8 @@
                 android:text="@string/sign_up"
                 android:textSize="20sp"
                 android:textStyle="bold"
+                android:fontFamily="@font/adamina"
+                android:backgroundTint="@color/button_color"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/iladdress" />
