--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,5 +8,6 @@
     <dimen name="button_width">200dp</dimen>
     <dimen name="logo_width">80dp</dimen>
     <dimen name="logo_height">70dp</dimen>
+    <dimen name="icons_margin_top">20dp</dimen>
 </resources>
 
