--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="input_field_box_stroke_color">#691CC1</color>
     <color name="status_bar_color">#B48EE0</color>
     <color name="navbar_color">#B48EE0</color>
+    <color name="post_requirement_card_view_color">#FAFEFF</color>
 
 </resources>
