--- a/app/src/main/res/layout/activity_verify_email_for_password_reset_student.xml
+++ b/app/src/main/res/layout/activity_verify_email_for_password_reset_student.xml
@@ -5,8 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".VerifyEmailTeacher">
-
+    tools:context=".VerifyEmailForPasswordResetStudent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/view"
@@ -103,4 +102,5 @@
         app:layout_constraintTop_toBottomOf="@id/tvEmailNotReceived"
 
         />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
