--- a/app/src/main/res/layout/activity_verify_email_for_password_reset_teacher.xml
+++ b/app/src/main/res/layout/activity_verify_email_for_password_reset_teacher.xml
@@ -5,7 +5,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".VerifyEmailStudent">
+    tools:context=".VerifyEmailForPasswordResetTeacher">
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/view"
@@ -102,5 +103,4 @@
         app:layout_constraintTop_toBottomOf="@id/tvEmailNotReceived"
 
         />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
