--- a/app/src/main/res/layout/single_tutor_design.xml
+++ b/app/src/main/res/layout/single_tutor_design.xml
@@ -52,7 +52,7 @@
                 android:layout_marginStart="@dimen/margin_start_end"
                 android:fontFamily="@font/adamina"
                 android:padding="13dp"
-                android:text="@string/subjects"
+                android:text="@string/subject"
                 android:textColor="@color/text_color"
                 android:textSize="15sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -66,7 +66,7 @@
                 android:layout_marginStart="@dimen/margin_start_end"
                 android:fontFamily="@font/adamina"
                 android:padding="13dp"
-                android:text="@string/description"
+                android:text="@string/profile_description"
                 android:textColor="@color/text_color"
                 android:textSize="15sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -80,7 +80,7 @@
                 android:layout_marginTop="@dimen/post_requirement_margin_top"
                 android:layout_marginEnd="@dimen/margin_start_end"
                 android:contentDescription="@string/logo"
-                android:src="@drawable/description"
+                android:src="@drawable/ic_gender_preference"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tvDesc" />
 
@@ -170,22 +170,25 @@
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/adamina"
                 android:padding="5dp"
-                android:text="@string/experience"
+                android:text="@string/experiences_in_years"
                 android:textColor="@color/text_color"
                 android:textSize="15sp"
                 app:layout_constraintStart_toEndOf="@id/ivExperience"
                 app:layout_constraintTop_toBottomOf="@id/tvFee" />
             <Button
-                android:layout_width="wrap_content"
+                android:id="@+id/btnContact"
+                android:layout_width="@dimen/button_width"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/tvExperience"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:text="@string/contact_tutor"
-                android:fontFamily="@font/adamina"
-                android:textSize="17sp"
-                android:id="@+id/btnContactTutor"
                 android:backgroundTint="@color/button_color"
+                android:text="@string/contact"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:fontFamily="@font/adamina"
+                android:textStyle="bold"
+                app:layout_constraintTop_toBottomOf="@id/tvExperience"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="@dimen/text_margin_top"
+                android:layout_marginEnd="20dp"
                 />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
