--- a/app/src/main/res/layout/activity_profile_teacher.xml
+++ b/app/src/main/res/layout/activity_profile_teacher.xml
@@ -172,7 +172,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_start_end"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="25dp"
                 android:fontFamily="@font/adamina"
                 android:padding="5dp"
                 android:text="@string/profile_description"
@@ -277,7 +277,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_start_end"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="25dp"
                 android:fontFamily="@font/adamina"
                 android:padding="5dp"
                 android:text="@string/speciality"
@@ -329,17 +329,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_start_end"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="23dp"
                 android:fontFamily="@font/adamina"
                 android:padding="5dp"
-                android:text="@string/please_enter_your_institute_name"
+                android:text="@string/institute_name_with_city"
                 android:textColor="@color/text_color"
                 android:textSize="15sp"
                 app:layout_constraintStart_toEndOf="@id/ivInstitute"
                 app:layout_constraintTop_toBottomOf="@id/tvSubject" />
 
             <Button
-                android:id="@+id/btnContactTutor"
+                android:id="@+id/btnLogout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/button_color"
@@ -347,6 +347,7 @@
                 android:text="@string/logout"
                 android:textSize="20sp"
                 android:textStyle="bold"
+                android:layout_marginTop="@dimen/icons_margin_top"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tvInstitute" />
